[package]
name = "orthogonal-rotation"
version = "0.0.5"
authors = ["guccialex <alex.gusain2@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Functions for rotating the points on a square"
repository = "https://github.com/guccialex/orthogonal_rotation"
readme = "README.md"


[dependencies]